--- a/guide-detail-sidebar.html
+++ b/guide-detail-sidebar.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		
 		<!-- title -->
-		<title>Destination-Detail | Travel Hub HTML5 Template</title>
+		<title>Guide Detail | Travel Hub HTML5 Template</title>
 		
 		<!-- meta description -->
 		<meta name="description" content="Guided Gateway" />
@@ -85,7 +85,7 @@
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
-				href="guides.html" title="">Guides</a> <!-- ul> <li><a
+				href="top-guides-listview.html" title="">Guides</a> <!-- ul> <li><a
 				href="deals.html" title="">DEALS PAGE</a></li> <li><a
 				href="deals-sidebar.html" title="">DEALS PAGE WITH
 				SIDEBAR</a></li> <li><a href="deals-detail.html"
@@ -180,7 +180,7 @@
 							
 							<!-- START #commentForm -->
 							<section id="commentForm">
-								<h2 class="ft-heading text-upper">Leave Us a Reply</h2>
+								<h2 class="ft-heading text-upper">Contact Guide</h2>
 								<form action="comment.php" method="post">
 									<fieldset>
 										<ul class="formFields list-unstyled">
