--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
 				title="">HOME PAGE 1</a></li> <li><a href="home.html"
 				title="">HOME PAGE 2</a></li> </ul --> </li> <li><a
-				href="top-guides-listview.html" title="">Guides</a> <!-- ul> <li><a
+				href="guides.html" title="">Guides</a> <!-- ul> <li><a
 				href="deals.html" title="">DEALS PAGE</a></li> <li><a
 				href="deals-sidebar.html" title="">DEALS PAGE WITH
 				SIDEBAR</a></li> <li><a href="deals-detail.html"
