--- a/guide_profile.html
+++ b/guide_profile.html
@@ -102,7 +102,7 @@
 				class="col-md-9"> <nav class="main-nav">
 				<span>MENU</span> <ul id="main-menu"> <li><a href="index.html"
 				title="">HOME</a>  </li> <li><a
-				href="top-guides-listview.html" title="">Guides</a>  </li> <li><a
+				href="guides.html" title="">Guides</a>  </li> <li><a
 				href="top-destinations-listview-sidebar.html" title="">Destinations</a> </li>
                 <li><a
 				href="top-themes-listview-sidebar.html" title="">Themes</a> </li>
