--- a/tour_detail_sidebar.html
+++ b/tour_detail_sidebar.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		
 		<!-- title -->
-		<title>Kolkata, WB | Guided Gateway</title>
+		<title>Tour Details | Guided Gateway</title>
 		
 		<!-- meta description -->
 		<meta name="description" content="Guided Gateway" />
@@ -33,8 +33,8 @@
 		<!-- color scheme -->
 		<link rel="stylesheet" type="text/css" href="css/colors/color3.css" title="color3" />
         
-        <script src= "js/angular.min.js"></script>
-        <script src="myDestination.js"></script>
+      <!--   <script src= "js/angular.min.js"></script>
+        <script src="myDestination.js"></script> -->
         <!-- Google Analytics -->
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -76,7 +76,7 @@ ul.rating {
 	<!-- END head -->
 
 	<!-- START body -->
-	<body ng-app="topTours" ng-controller="tourDetailCtrl" >
+	<body ng-app="topTours" ng-controller="tourDetailCtrl">
 		<!-- START #wrapper --> 
 		<div id="wrapper">
 			<!-- START header -->
