--- a/top-tours-listview-sidebar.html
+++ b/top-tours-listview-sidebar.html
@@ -160,6 +160,7 @@ ul.rating {
 				<div class="container" ng-app="topTours">
 				  
 					<div class="row">
+					<a href="tour_detail_sidebar.html">
 						<div class="col-md-8" ng-controller="toursCtrl" >
 							<div class="row" ng-repeat="x in tours">
 								<div class="col-md-12">
@@ -199,6 +200,7 @@ ul.rating {
 							
 								<div class="clearfix"></div>
 							</div>
+							</a>
 						</div>
 						<!-- START #sidebar -->
 						<aside id="sidebar" class="col-md-4">
