--- a/top-guides-listview.html
+++ b/top-guides-listview.html
@@ -234,8 +234,8 @@ ul.rating {
 						<div class="col-md-4" ng-repeat="x in allguides" >
 							 <div	class="ft-item"> 
 						  <span class="ft-image">
-						  <a href="user-profile.php">
-							 <img class="img-responsive" src="{{x.Photo}}" alt="Top Guide" /> </a>
+						  <a href="guide-detail-sidebar.html">
+							 <img style="height:230px;width:180;" class="img-responsive" src="{{x.Photo}}" alt="Top Guide" /> </a>
 						  </span>
 					  
 								<div class="ft-data">
