--- a/common_header.html
+++ b/common_header.html
@@ -26,7 +26,7 @@
 				<!-- START #main-header --> <div id="main-header"> <div
 				class="container"> <div class="row"> <div
 				class="col-md-3"> <a id="site-logo" href="#"> <img
-				src="images/logo.png" alt="Guided Gateway" /> </a> </div> <div
+				src="img/logo.png" alt="Guided Gateway" /> </a> </div> <div
 				class="col-md-9"> <nav class="main-nav">
 				<span>MENU</span> <ul id="main-menu"> <li><a href="#"
 				title="">HOME</a> <!-- ul> <li><a href="index.html"
