--- a/guide-detail-sidebar.html
+++ b/guide-detail-sidebar.html
@@ -34,6 +34,7 @@
 		<link rel="stylesheet" type="text/css" href="css/colors/color3.css" title="color3" />
 		 <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
    <script src="guide_profile_All.js"></script>
+   <
    	<style type="text/css">
 	#searchDiv{
 	<!-- top: 130px;
@@ -66,7 +67,8 @@ ul.rating {
 }
 
 	</style>
-	
+	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="guideContact.js"></script>
 	</head>
 	<!-- END head -->
 
@@ -217,29 +219,45 @@ ul.rating {
 							<!-- START #commentForm -->
 							<section id="commentForm">
 								<h2 class="ft-heading text-upper">Contact Guide</h2>
-								<form action="comment.php" method="post">
+								<form action="contactGuideMail.php" method="post" ng-controller="validateCtrlNew" name="myForm"  novalidate>
 									<fieldset>
 										<ul class="formFields list-unstyled">
 											<li class="row">
 												<div class="col-md-6">
-													<label>Name <span class="required small">(Required)</span></label>
-													<input type="text" class="form-control" name="name" value="" />
+													<label>Name </label>
+													<input type="text" class="form-control" name="name" value="name" ng-model="name" required ng-pattern="/^[a-z A-Z]+$/" />
+														 <span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
+											 <span ng-show="myForm.name.$error.required">*Name is required.</span>
+											   <span ng-show="myForm.name.$error.pattern">*Invalid Name ...</span>
+											  </span>
 												</div>
 												<div class="col-md-6">
-													<label>Email <span class="required small">(Required)</span></label>
-													<input type="text" class="form-control" name="email" value="" />
+													<label>Email</label>
+													<input type="text" class="form-control" name="email" value="email" ng-model="email" required ng-pattern="/^[a-zA-Z0-9._-]+@[a-zA-Z0-9]+\.[a-zA-Z]{2,5}(\.[a-zA-Z]{2,5}){0,1}$/" />
+												 <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+											 <span ng-show="myForm.email.$error.required">*email is required.</span>
+											   <span ng-show="myForm.email.$error.pattern">*Invalid Name ...</span>
+											  </span>
 												</div>
 											</li>
 											<li class="row">
 												<div class="col-md-12">
-													<label>Subject <span class="required small">(Required)</span></label>
-													<input type="text" class="form-control" name="subject" value="" />
+													<label>Subject </label>
+													<input type="text" class="form-control" name="subject" value="subject" required ng-model="subject" ng-pattern="/^[a-z A-Z]+$/"/>
+													 <span style="color:red" ng-show="myForm.subject.$dirty && myForm.subject.$invalid">
+											 <span ng-show="myForm.subject.$error.required">*subject is required.</span>
+											   <span ng-show="myForm.subject.$error.pattern">*Invalid Name ...</span>
+											  </span>
 												</div>
 											</li>
 											<li class="row">
 												<div class="col-md-12">
-													<label>Message <span class="required small">(Required)</span></label>
-													<textarea class="form-control"></textarea>
+													<label>Message </label>
+													<textarea class="form-control" ng-model="Message" value="Message" required ng-pattern="/^[a-z A-Z]+$/"></textarea>
+													 <span style="color:red" ng-show="myForm.Message.$dirty && myForm.Message.$invalid">
+											 <span ng-show="myForm.Message.$error.required">*Message is required.</span>
+											   <span ng-show="myForm.Message.$error.pattern">*Invalid Name ...</span>
+											  </span>
 												</div>
 											</li>
 											<li class="row">
