--- a/top-guides-listview.html
+++ b/top-guides-listview.html
@@ -182,7 +182,7 @@ ul.rating {
 			
 			<!-- START #page-header -->
 			<div id="header-banner">
-				<div class="top-header">
+				<div class="">
 					<div class="container">
 						<div class="row">
 							<!-- <section class="col-sm-6">
@@ -203,7 +203,7 @@ ul.rating {
 				</div>
 			</div>
 			<!-- END #page-header -->
-			<!-- <div class="main-contents col-md-8 col-md-offset-2" id="searchDiv">
+			<div class="main-contents col-md-8 col-md-offset-2" id="searchDiv">
 					<form class="plan-tour">
 						<div class="top-fields"><br>
 						<div class="row">								
@@ -224,7 +224,7 @@ ul.rating {
 						</div>
 						</div>
 					</form>
-				</div> -->
+				</div>
 			<!-- START .main-contents -->
 			<div class="main-contents">
 				<div class="container">
