--- a/guide-detail-sidebar.html
+++ b/guide-detail-sidebar.html
@@ -34,7 +34,6 @@
 		<link rel="stylesheet" type="text/css" href="css/colors/color3.css" title="color3" />
 		 <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
    <script src="guide_profile_All.js"></script>
-   
    	<style type="text/css">
 	#searchDiv{
 	<!-- top: 130px;
@@ -67,8 +66,7 @@ ul.rating {
 }
 
 	</style>
-	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="guideContact.js"></script>
+	
 	</head>
 	<!-- END head -->
 
@@ -217,47 +215,31 @@ ul.rating {
 							<!-- END .about-author -->
 							
 							<!-- START #commentForm -->
-						<!-- 	<section id="commentForm">
+							<section id="commentForm">
 								<h2 class="ft-heading text-upper">Contact Guide</h2>
-								<form action="contactGuideMail.php" method="post" ng-controller="validateCtrlNew" name="myForm"  novalidate>
+								<form action="comment.php" method="post">
 									<fieldset>
 										<ul class="formFields list-unstyled">
 											<li class="row">
 												<div class="col-md-6">
-													<label>Name </label>
-													<input type="text" class="form-control" name="name" value="name" ng-model="name" required ng-pattern="/^[a-z A-Z]+$/" />
-														 <span style="color:red" ng-show="myForm.name.$dirty && myForm.name.$invalid">
-											 <span ng-show="myForm.name.$error.required">*Name is required.</span>
-											   <span ng-show="myForm.name.$error.pattern">*Invalid Name ...</span>
-											  </span>
+													<label>Name <span class="required small">(Required)</span></label>
+													<input type="text" class="form-control" name="name" value="" />
 												</div>
 												<div class="col-md-6">
-													<label>Email</label>
-													<input type="text" class="form-control" name="email" value="email" ng-model="email" required ng-pattern="/^[a-zA-Z0-9._-]+@[a-zA-Z0-9]+\.[a-zA-Z]{2,5}(\.[a-zA-Z]{2,5}){0,1}$/" />
-												 <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
-											 <span ng-show="myForm.email.$error.required">*email is required.</span>
-											   <span ng-show="myForm.email.$error.pattern">*Invalid Name ...</span>
-											  </span>
+													<label>Email <span class="required small">(Required)</span></label>
+													<input type="text" class="form-control" name="email" value="" />
 												</div>
 											</li>
 											<li class="row">
 												<div class="col-md-12">
-													<label>Subject </label>
-													<input type="text" class="form-control" name="subject" value="subject" required ng-model="subject" ng-pattern="/^[a-z A-Z]+$/"/>
-													 <span style="color:red" ng-show="myForm.subject.$dirty && myForm.subject.$invalid">
-											 <span ng-show="myForm.subject.$error.required">*subject is required.</span>
-											   <span ng-show="myForm.subject.$error.pattern">*Invalid Name ...</span>
-											  </span>
+													<label>Subject <span class="required small">(Required)</span></label>
+													<input type="text" class="form-control" name="subject" value="" />
 												</div>
 											</li>
 											<li class="row">
 												<div class="col-md-12">
-													<label>Message </label>
-													<textarea class="form-control" ng-model="Message" value="Message" required ng-pattern="/^[a-z A-Z]+$/"></textarea>
-													 <span style="color:red" ng-show="myForm.Message.$dirty && myForm.Message.$invalid">
-											 <span ng-show="myForm.Message.$error.required">*Message is required.</span>
-											   <span ng-show="myForm.Message.$error.pattern">*Invalid Name ...</span>
-											  </span>
+													<label>Message <span class="required small">(Required)</span></label>
+													<textarea class="form-control"></textarea>
 												</div>
 											</li>
 											<li class="row">
@@ -269,7 +251,7 @@ ul.rating {
 										</ul>
 									</fieldset>
 								</form>
-							</section> -->
+							</section>
 							<!-- END #commentForm -->
 						</div>
 						<!-- END #page -->
@@ -379,10 +361,10 @@ ul.rating {
 								<!-- Sidebar Newsletter -->
 								<div class="styled-box gray">
 									<h3 class="text-upper">Contact for Custom tour</h3>
-									<form action="contactGuideMail.php" method="post">
+									<form action="#" method="post">
 										<label>Email Address</label>
 										<input type="text" name="email" class="form-control input-style1 marb20" value="Enter Email Address" onfocus="if (this.value == 'Enter Email Address') { this.value = ''; }" onblur="if (this.value == '') { this.value = 'Enter Email Address'; }" />
-										<input type="submit" name="submit" class="btn btn-primary text-upper marb20" value="Send" />
+										<input type="submit" name="submit" class="btn btn-primary text-upper marb20" value="Subscribe" />
 									</form>
 								</div>
 							</div>
