--- a/howitworks_guide.html
+++ b/howitworks_guide.html
@@ -98,8 +98,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="http://www.guidedgateway.com">Home</a></li>
-                <li><a href="guide_login.php">Guide Home</a></li>
-                <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
+                <li><a href="login.php">Guide Home</a></li>
+                <li><a href="registration.php">Guide Sign Up</a></li>
             </ul>
 
         </div>
@@ -117,7 +117,7 @@
 
                     <p style="color: #444454">Guided Gateway is an online marketplace for guides. <br/>We promote, connect  national and international toursists with our local <bold>GUIDES</bold>.</p>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Sign Up <i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="registration.php">Sign Up <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
