--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -87,8 +87,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="guide_login.php">Guide Home</a></li>
-                <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
+                <li><a href="login.php">Guide Home</a></li>
+                <li><a href="registration.php">Guide Sign Up</a></li>
                 <li><a href="#contact">Contact</a></li>
 
             </ul>
@@ -114,7 +114,7 @@
                         <ul><li><blink-text style="color: #444454">20% commission over service rate for next 6 months</blink-text></li>
                             <li><blink-text style="color: #444454">Prime spot in our website for next 6 months</blink-text></li></ul>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Join <i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="registration.php">Join <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
