--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ ul.rating {
 	onblur="if (this.value == '') { this.value = 'Search...'; }" />
 	<input type="submit" name="submit" class="search-submit" value="" />
 	</fieldset> </form> <span class="top-link small"><a
-										href="guide_login.php" title="">Guide
+										href="login.php" title="">Guide
 										Sign-in</a></span> <span class="top-link small"><a href="sign-in.html"
 										title="">SIGN IN</a></span> </div>
 	</div> </div> </div> </div> <!-- END #top-header -->
