--- a/guide-detail-sidebar.html
+++ b/guide-detail-sidebar.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		
 		<!-- title -->
-		<title>Guide Detail | Guided Gateway - Authentic Affordable Travel</title>
+		<title>Guide Detail | Travel Hub HTML5 Template</title>
 		
 		<!-- meta description -->
 		<meta name="description" content="Guided Gateway" />
@@ -84,11 +84,14 @@ ul.rating {
 								<div class="left-part alignleft">
 									<span class="contact-email small">touchus@guidedgateway.com</span>
 									<span class="contact-phone small">+1 510 938 2562</span>
-									 <ul class="social-media header-social"> 
-                                         <li><a class="sm-facebook" href="#"><span>Facebook</span></a></li> <li><a class="sm-flickr"
-	href="#"><span>Pinterest</span></a></li> <li><a class="sm-windows"
-	href="#"><span>Youtube</span></a></li> <li><a class="sm-stumble"
-	href="#"><span>Twitter</span></a></li> </ul>
+									<ul class="social-media header-social">
+										<li><a class="sm-yahoo" href="#"><span>Yahoo</span></a></li>
+										<li><a class="sm-facebook" href="#"><span>Facebook</span></a></li>
+										<li><a class="sm-rss" href="#"><span>RSS</span></a></li>
+										<li><a class="sm-flickr" href="#"><span>Flicker</span></a></li>
+										<li><a class="sm-windows" href="#"><span>Windows</span></a></li>
+										<li><a class="sm-stumble" href="#"><span>Stumbleupon</span></a></li>
+									</ul>
 								</div>
 							</div>
 							<div class="col-md-6">
