--- a/index_old.html
+++ b/index_old.html
@@ -145,7 +145,7 @@ span.stars span {
 				
 				<ul> 
 				<li><a href="#" title="">Touriest SIGN IN</a></li>
-				<li><a href="login.php" title="">Guide SIGN IN</a></li>
+				<li><a href="guide_login.php" title="">Guide SIGN IN</a></li>
 				</ul>
 				
 				</li>
