--- a/howitworks.html
+++ b/howitworks.html
@@ -44,7 +44,7 @@
 			<!-- Main navigation -->
 			<ul id="headernavigation" class="nav navbar-nav">
 				<li class="active"><a href="#page-top">Home</a></li>	
-				<li><a href="registration.php">Join Us</a></li>	
+				<li><a href="guide_registration_1.php">Join Us</a></li>	
 			</ul> <!-- /.nav .navbar-nav -->
 		</nav> <!-- /.navbar-collapse  -->
 	</div><!-- /#main-menu -->
