--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -38,8 +38,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="guide_login.php">Guide Home</a></li>
-                <li><a href="guide_registration_1.php">Guide Sign Up</a></li>
+                <li><a href="login.php">Guide Home</a></li>
+                <li><a href="registration.php">Guide Sign Up</a></li>
                 <li><a href="#contact">Contact</a></li>
 
             </ul>
@@ -63,7 +63,7 @@
         
                     <h3 style="color: #248822">Be part of a thriving community to promote your unique tours to tourists across the world</h3>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Join <i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="registration.php">Join <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
