--- a/guide_login.html
+++ b/guide_login.html
@@ -147,7 +147,7 @@
 										</div>
 										<br /><br />
 										<div class="col-sm-12">
-											<form action="guide_login.php" method="POST">
+											<form action="login.php" method="POST">
 												<input type="text" class="form-control" id="username" name="username" placeholder="Email Address or Mobile Number" style="height:36px; background-color:white; color:black; -moz-border-radius: 10px; border-radius: 2px; border:solid 1px gray; padding:5px;">
 												<br /> <input type="password" class="form-control" id="password" name="password" placeholder="Password" style="height:36px; background-color:white; color:black; -moz-border-radius: 10px; border-radius: 2px; border:solid 1px gray; padding:5px;">
 												<br /> <button class="btn  btn-sm btn-default btn-block" style="font-size:18px; font-weight:bold; height:36px; -moz-border-radius: 10px; border-radius: 2px; padding:5px; background-color:#ff845e;" type="submit">Login</button>
