--- a/Why_GuidedGateway.html
+++ b/Why_GuidedGateway.html
@@ -111,7 +111,7 @@
                         <ul><li><blink-text style="color: #444454">20% commission over service rate for next 6 months</blink-text></li>
                             <li><blink-text style="color: #444454">Prime spot in our website for next 6 months</blink-text></li></ul>
 
-                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="guide_registration_1.php">Join <i class="icon icon-angle-right"></i></a></p>
+                    <p style="color: #444454"><a class="btn btn-success btn-lg" href="registration.php">Join <i class="icon icon-angle-right"></i></a></p>
                 </div>
             </div>
         </div>
