--- a/widget.html
+++ b/widget.html
@@ -50,12 +50,9 @@
 									<span class="contact-email small">touchus@travelhub.com</span>
 									<span class="contact-phone small">+1 125 496 0999</span>
 									<ul class="social-media header-social">
-										<li><a class="sm-yahoo" href="#"><span>Yahoo</span></a></li>
 										<li><a class="sm-facebook" href="#"><span>Facebook</span></a></li>
-										<li><a class="sm-rss" href="#"><span>RSS</span></a></li>
-										<li><a class="sm-flickr" href="#"><span>Flicker</span></a></li>
-										<li><a class="sm-windows" href="#"><span>Windows</span></a></li>
-										<li><a class="sm-stumble" href="#"><span>Stumbleupon</span></a></li>
+										<li><a class="sm-twitter" href="#"><span>Pinterest</span></a></li>
+										<li><a class="sm-pinterest" href="#"><span>Pinterest</span></a></li>
 									</ul>
 								</div>
 							</div>
@@ -622,12 +619,9 @@
 								<div class="foot-box col-md-4 text-right">
 									<span>Stay Connected</span>
 									<ul class="social-media footer-social">
-										<li><a class="sm-yahoo" href="#"><span>Yahoo</span></a></li>
 										<li><a class="sm-facebook" href="#"><span>Facebook</span></a></li>
-										<li><a class="sm-rss" href="#"><span>RSS</span></a></li>
-										<li><a class="sm-flickr" href="#"><span>Flicker</span></a></li>
-										<li><a class="sm-windows" href="#"><span>Windows</span></a></li>
-										<li><a class="sm-stumble" href="#"><span>Stumbleupon</span></a></li>
+										<li><a class="sm-pinterest" href="#"><span>Pinterest</span></a></li>
+										<li><a class="sm-twitter" href="#"><span>Twitter</span></a></li>
 									</ul>
 								</div>
 								<div class="foot-box foot-box-md col-md-4">
