--- a/widget.html
+++ b/widget.html
@@ -51,7 +51,7 @@
 									<span class="contact-phone small">+1 125 496 0999</span>
 									<ul class="social-media header-social">
 										<li><a class="sm-facebook" href="#"><span>Facebook</span></a></li>
-										<li><a class="sm-twitter" href="#"><span>Pinterest</span></a></li>
+										<li><a class="sm-twitter" href="#"><span>Twitter</span></a></li>
 										<li><a class="sm-pinterest" href="#"><span>Pinterest</span></a></li>
 									</ul>
 								</div>
